--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ numpy==2.1.1
 paramiko==3.5.0
 PyQt5==5.15.11
 PyQt5_sip==12.15.0
-ROOT==0.0.1
+ROOT
 scikit_learn==1.5.2
 tensorflow==2.17.0
 tensorflow_intel==2.17.0
