--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,373 @@
-keras==3.5.0
-matplotlib==3.9.2
-numba==0.60.0
-numpy==2.1.1
-paramiko==3.5.0
-PyQt5==5.15.11
-PyQt5_sip==12.15.0
-ROOT
-scikit_learn==1.5.2
-tensorflow==2.17.0
-tensorflow_intel==2.17.0
-uproot==5.3.12
-watchdog==5.0.2
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: osx-arm64
+# created-by: conda 24.11.3
+absl-py=2.2.0=pyhd8ed1ab_0
+adwaita-icon-theme=48.0=unix_0
+anyio=4.9.0=pyh29332c3_0
+appnope=0.1.4=pyhd8ed1ab_1
+argon2-cffi=23.1.0=pyhd8ed1ab_1
+argon2-cffi-bindings=21.2.0=py311h460d6c5_5
+arrow=1.3.0=pyhd8ed1ab_1
+asttokens=3.0.0=pyhd8ed1ab_1
+astunparse=1.6.3=pyhd8ed1ab_3
+async-lru=2.0.5=pyh29332c3_0
+atk-1.0=2.38.0=hd03087b_2
+attrs=25.3.0=pyh71513ae_0
+awkward=2.6.7=pyhd8ed1ab_0
+awkward-cpp=37=py311h6bde47b_0
+babel=2.17.0=pyhd8ed1ab_0
+beautifulsoup4=4.13.3=pyha770c72_0
+bleach=6.2.0=pyh29332c3_4
+bleach-with-css=6.2.0=h82add2a_4
+brotli=1.1.0=hd74edd7_2
+brotli-bin=1.1.0=hd74edd7_2
+brotli-python=1.0.9=py311ha397e9f_8
+bzip2=1.0.8=h99b78c6_7
+c-ares=1.34.5=h5505292_0
+c-compiler=1.9.0=hdf49b6b_0
+ca-certificates=2025.4.26=hbd8a1cb_0
+cached-property=1.5.2=hd8ed1ab_1
+cached_property=1.5.2=pyha770c72_1
+cairo=1.18.2=h6a3b0d2_0
+cctools=986=h4c9edd9_3
+cctools_osx-arm64=986=hf2da8af_3
+certifi=2025.4.26=pyhd8ed1ab_0
+cffi=1.17.1=py311h3a79f62_0
+cfitsio=4.5.0=hc017baa_0
+charset-normalizer=3.4.1=pyhd8ed1ab_0
+clang=18.1.8=default_h675cc0c_3
+clang-18=18.1.8=default_h5c12605_3
+clang_impl_osx-arm64=18.1.8=h2ae9ea5_25
+clang_osx-arm64=18.1.8=h07b0088_25
+clangxx=18.1.8=default_h675cc0c_3
+clangxx_impl_osx-arm64=18.1.8=h555f467_25
+clangxx_osx-arm64=18.1.8=h07b0088_25
+colorama=0.4.6=pyhd8ed1ab_1
+comm=0.2.2=pyhd8ed1ab_1
+compiler-rt=18.1.8=h856b3c1_1
+compiler-rt_osx-arm64=18.1.8=h832e737_1
+compilers=1.9.0=hce30654_0
+contourpy=1.2.1=py311hcc98501_0
+cramjam=2.8.3=py311h481aa64_1
+cxx-compiler=1.9.0=hba80287_0
+cycler=0.12.1=pyhd8ed1ab_1
+cyrus-sasl=2.1.27=h60b93bd_7
+davix=0.8.10=hb37c36c_0
+debugpy=1.8.5=py311hb9542d7_0
+decorator=5.2.1=pyhd8ed1ab_0
+defusedxml=0.7.1=pyhd8ed1ab_0
+docopt=0.6.2=pyhd8ed1ab_2
+epoxy=1.5.10=h1c322ee_1
+exceptiongroup=1.2.2=pyhd8ed1ab_1
+executing=2.1.0=pyhd8ed1ab_1
+fastjet-cxx=3.4.3=h4a8cdbb_2
+fftw=3.3.10=nompi_h6637ab6_110
+flatbuffers=24.3.25=hebf3989_0
+font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+font-ttf-inconsolata=3.000=h77eed37_0
+font-ttf-source-code-pro=2.038=h77eed37_0
+font-ttf-ubuntu=0.83=h77eed37_3
+fontconfig=2.15.0=h1383a14_1
+fonts-conda-ecosystem=1=0
+fonts-conda-forge=1=0
+fonttools=4.57.0=py311h4921393_0
+fortran-compiler=1.9.0=h5692697_0
+fqdn=1.5.1=pyhd8ed1ab_1
+freetype=2.13.3=h1d14073_0
+fribidi=1.0.10=h27ca646_0
+fsspec=2025.3.2=pyhd8ed1ab_0
+ftgl=2.4.0=hccfd508_0
+gast=0.6.0=pyhd8ed1ab_0
+gdk-pixbuf=2.42.12=h7ddc832_0
+gfortran=13.3.0=h3ef1dbf_1
+gfortran_impl_osx-arm64=13.3.0=h16b3750_105
+gfortran_osx-arm64=13.3.0=h3c33bd0_1
+giflib=5.2.2=h93a5062_0
+gl2ps=1.4.2=hc97c1ff_1
+glew=2.1.0=h9f76cd9_2
+glib=2.84.0=heee381b_0
+glib-tools=2.84.0=h1dc7a0c_0
+gmp=6.3.0=h7bae524_2
+google-pasta=0.2.0=pyhd8ed1ab_2
+graphite2=1.3.13=hebf3989_1003
+graphviz=12.2.1=hff64154_1
+grpcio=1.62.2=py311hf5d242d_0
+gsl=2.7=h6e638da_0
+gsoap=2.8.123=hfb11b17_0
+gst-plugins-base=1.24.11=h3c5c1d0_0
+gstreamer=1.24.11=hfe24232_0
+gtest=1.16.0=ha393de7_0
+gtk2=2.24.33=h91d5085_5
+gtk3=3.24.43=he7bb075_3
+gts=0.7.6=he42f4ea_4
+h11=0.14.0=pyhd8ed1ab_1
+h2=4.2.0=pyhd8ed1ab_0
+h5py=3.13.0=nompi_py311h20052fc_100
+harfbuzz=10.4.0=hb72c1af_0
+hdf5=1.14.3=nompi_hec07895_105
+hicolor-icon-theme=0.17=hce30654_2
+hpack=4.1.0=pyhd8ed1ab_0
+httpcore=1.0.7=pyh29332c3_1
+httpx=0.28.1=pyhd8ed1ab_0
+hyperframe=6.1.0=pyhd8ed1ab_0
+icu=75.1=hfee45f7_0
+idna=3.10=pyhd8ed1ab_1
+importlib-metadata=8.6.1=pyha770c72_0
+importlib_metadata=8.6.1=hd8ed1ab_0
+importlib_resources=6.5.2=pyhd8ed1ab_0
+ipykernel=6.29.5=pyh57ce528_0
+ipyparallel=9.0.1=pyh29332c3_0
+ipython=9.1.0=pyhfb0248b_0
+ipython_pygments_lexers=1.1.1=pyhd8ed1ab_0
+isl=0.26=imath32_h347afa1_101
+isoduration=20.11.0=pyhd8ed1ab_1
+jedi=0.19.2=pyhd8ed1ab_1
+jinja2=3.1.6=pyhd8ed1ab_0
+joblib=1.4.2=pyhd8ed1ab_1
+json5=0.12.0=pyhd8ed1ab_0
+jsonpointer=3.0.0=py311h267d04e_1
+jsonschema=4.23.0=pyhd8ed1ab_1
+jsonschema-specifications=2024.10.1=pyhd8ed1ab_1
+jsonschema-with-format-nongpl=4.23.0=hd8ed1ab_1
+jupyter-lsp=2.2.5=pyhd8ed1ab_1
+jupyter_client=8.6.3=pyhd8ed1ab_1
+jupyter_core=5.7.2=pyh31011fe_1
+jupyter_events=0.12.0=pyh29332c3_0
+jupyter_server=2.15.0=pyhd8ed1ab_0
+jupyter_server_terminals=0.5.3=pyhd8ed1ab_1
+jupyterlab=4.4.0=pyhd8ed1ab_0
+jupyterlab_pygments=0.3.0=pyhd8ed1ab_2
+jupyterlab_server=2.27.3=pyhd8ed1ab_1
+keras=3.9.0=pyh753f3f9_0
+kiwisolver=1.4.5=py311he4fd1f5_1
+krb5=1.21.3=h237132a_0
+lcms2=2.16=ha0e7c42_0
+ld64=711=h4c6efb1_3
+ld64_osx-arm64=711=h5ecc89c_3
+lerc=4.0.0=h9a09cb3_0
+libabseil=20240116.2=cxx17_h00cdb27_1
+libaec=1.1.3=hebf3989_0
+libasprintf=0.22.5=h8414b35_3
+libblas=3.9.0=31_h10e41b3_openblas
+libbrotlicommon=1.1.0=hd74edd7_2
+libbrotlidec=1.1.0=hd74edd7_2
+libbrotlienc=1.1.0=hd74edd7_2
+libcblas=3.9.0=31_hb3479ef_openblas
+libclang=18.1.1=pypi_0
+libclang-cpp16=16.0.6=default_hc2ef00a_14
+libclang-cpp17=17.0.6=default_hf90f093_8
+libclang-cpp18.1=18.1.8=default_h5c12605_3
+libclang13=20.1.4=default_hee4fbb3_0
+libcurl=8.14.0=h73640d1_0
+libcxx=20.1.6=ha82da77_0
+libcxx-devel=16.0.6=h86353a2_2
+libdeflate=1.21=h99b78c6_0
+libedit=3.1.20250104=pl5321hafb1f1b_0
+libev=4.33=h93a5062_2
+libexpat=2.7.0=h286801f_0
+libffi=3.4.6=h1da3d7d_1
+libgd=2.3.3=hac1b3a8_10
+libgettextpo=0.23.1=h493aca8_0
+libgfortran=14.2.0=heb5dd2a_105
+libgfortran-devel_osx-arm64=13.3.0=h5020ebb_105
+libgfortran5=14.2.0=h2c44a93_105
+libglib=2.84.0=hdff4504_0
+libgrpc=1.62.2=h9c18a4f_0
+libhwloc=2.11.1=default_h7685b71_1000
+libiconv=1.18=hfe07756_1
+libintl=0.23.1=h493aca8_0
+libintl-devel=0.23.1=h493aca8_0
+libjpeg-turbo=3.0.0=hb547adb_1
+liblapack=3.9.0=31_hc9a63f6_openblas
+libllvm14=14.0.6=hd1a9a77_4
+libllvm16=16.0.6=haab561b_3
+libllvm17=17.0.6=hc4b4ae8_3
+libllvm18=18.1.8=h5090b49_2
+libllvm20=20.1.4=h598bca7_0
+liblzma=5.8.1=h39f12f2_0
+liblzma-devel=5.8.1=h39f12f2_0
+libmpdec=4.0.0=h99b78c6_0
+libnghttp2=1.64.0=h6d7220d_0
+libntlm=1.8=h5505292_0
+libogg=1.3.5=h48c0fde_1
+libopenblas=0.3.29=openmp_hf332438_0
+libopus=1.5.2=h48c0fde_0
+libpng=1.6.47=h3783ad8_0
+libpq=17.5=h6896619_0
+libprotobuf=4.25.3=hbfab5d5_0
+libre2-11=2023.09.01=h7b2c953_2
+librsvg=2.58.4=h40956f1_0
+libsodium=1.0.18=h27ca646_1
+libsqlite=3.49.1=h3f77e49_2
+libssh2=1.11.1=h9cc3647_0
+libtiff=4.7.0=h9c1d414_0
+libvorbis=1.3.7=h9f76cd9_0
+libwebp-base=1.5.0=h2471fea_0
+libxcb=1.17.0=hdb1d25a_0
+libxcrypt=4.4.36=h93a5062_1
+libxml2=2.13.7=h52572c6_1
+libzlib=1.3.1=h8359307_2
+llvm-openmp=20.1.2=hdb05f8b_1
+llvm-tools=18.1.8=h5090b49_2
+llvm-tools-18=18.1.8=h5090b49_2
+llvmlite=0.43.0=py311h02e79e2_0
+lz4-c=1.10.0=h286801f_1
+macosx_deployment_target_osx-arm64=11.0=h6553868_2
+markdown=3.6=pyhd8ed1ab_0
+markdown-it-py=3.0.0=pyhd8ed1ab_1
+markupsafe=3.0.2=py311h4921393_1
+matplotlib=3.9.2=py311ha1ab1f8_2
+matplotlib-base=3.9.2=py311hba6b155_0
+matplotlib-inline=0.1.7=pyhd8ed1ab_1
+mdurl=0.1.2=pyhd8ed1ab_1
+metakernel=0.30.3=pyhd8ed1ab_0
+mistune=3.1.3=pyh29332c3_0
+ml-dtypes=0.3.2=pypi_0
+ml_dtypes=0.4.0=py311h4b4568b_1
+mpc=1.3.1=h8f1351a_1
+mpfr=4.2.1=hb693164_3
+munkres=1.1.4=pyh9f0ad1d_0
+mysql-common=9.0.1=hd7719f6_6
+mysql-libs=9.0.1=ha8be5b7_6
+namex=0.0.8=pyhd8ed1ab_1
+nbclient=0.10.2=pyhd8ed1ab_0
+nbconvert-core=7.16.6=pyh29332c3_0
+nbformat=5.10.4=pyhd8ed1ab_1
+ncurses=6.5=h5e97a16_3
+nest-asyncio=1.6.0=pyhd8ed1ab_1
+nlohmann_json=3.11.3=h00cdb27_1
+notebook=7.4.0=pyhd8ed1ab_0
+notebook-shim=0.2.4=pyhd8ed1ab_1
+nspr=4.36=h5833ebf_0
+nss=3.111=ha3c76ea_0
+numba=0.60.0=py311h9506ed5_0
+numpy=1.26.4=py311h7125741_0
+openjpeg=2.5.2=h9f1df11_0
+openldap=2.6.10=hbe55e7a_0
+openssl=3.5.0=h81ee809_1
+opt_einsum=3.4.0=pyhd8ed1ab_1
+optree=0.12.1=py311h6bde47b_0
+overrides=7.7.0=pyhd8ed1ab_1
+packaging=24.2=pyhd8ed1ab_2
+pandas=2.2.2=py311h4b4568b_1
+pandocfilters=1.5.0=pyhd8ed1ab_0
+pango=1.56.1=h73f1e88_0
+parso=0.8.4=pyhd8ed1ab_1
+pcre=8.45=hbdafb3b_0
+pcre2=10.44=h297a79d_2
+pexpect=4.9.0=pyhd8ed1ab_1
+pickleshare=0.7.5=pyhd8ed1ab_1004
+pillow=10.4.0=py311hc903d1b_1
+pip=25.0.1=pyh8b19718_0
+pipreqs=0.4.13=pyhd8ed1ab_0
+pixman=0.43.4=hebf3989_0
+pkgutil-resolve-name=1.3.10=pyhd8ed1ab_2
+platformdirs=4.3.7=pyh29332c3_0
+ply=3.11=pyhd8ed1ab_3
+portalocker=3.0.0=py311h267d04e_0
+prometheus_client=0.21.1=pyhd8ed1ab_0
+prompt-toolkit=3.0.51=pyha770c72_0
+protobuf=4.25.6=pypi_0
+psutil=7.0.0=py311h917b07b_0
+pthread-stubs=0.4=hd74edd7_1002
+ptyprocess=0.7.0=pyhd8ed1ab_1
+pure_eval=0.2.3=pyhd8ed1ab_1
+pycparser=2.22=pyh29332c3_1
+pygments=2.19.1=pyhd8ed1ab_0
+pyobjc-core=11.0=py311hab620ed_0
+pyobjc-framework-cocoa=11.0=py311hab620ed_0
+pyparsing=3.2.3=pyhd8ed1ab_1
+pyqt=5.15.11=py311h2146069_0
+pyqt5-sip=12.17.0=py311h155a34a_0
+pysocks=1.7.1=pyha55dd90_7
+pythia8=8.312=py311h3b0184f_4
+python=3.11.0=h3ba56d0_1_cpython
+python-dateutil=2.9.0.post0=pyhff2d567_1
+python-fastjsonschema=2.21.1=pyhd8ed1ab_0
+python-flatbuffers=25.2.10=pyhbc23db3_0
+python-json-logger=2.0.7=pyhd8ed1ab_0
+python-tzdata=2025.2=pyhd8ed1ab_0
+python-xxhash=3.5.0=py311h917b07b_2
+python_abi=3.11=6_cp311
+pytz=2025.2=pyhd8ed1ab_0
+pyyaml=6.0.2=py311h4921393_2
+pyzmq=26.1.1=py311h9bed540_0
+qhull=2020.2=h420ef59_5
+qt-main=5.15.15=h67564f6_3
+re2=2023.09.01=h4cba328_2
+readline=8.2=h1d1bf99_2
+referencing=0.36.2=pyh29332c3_0
+requests=2.32.3=pyhd8ed1ab_1
+rfc3339-validator=0.1.4=pyhd8ed1ab_1
+rfc3986-validator=0.1.1=pyh9f0ad1d_0
+rich=14.0.0=pyh29332c3_0
+root=6.34.4=py311h67fab9a_0
+root_base=6.34.4=np20py311hd0fe195_0
+rpds-py=0.24.0=py311hc9d6b66_0
+scikit-learn=1.7.0=py311h47fa2fb_1
+scipy=1.14.0=py311hceeca8c_2
+scitokens-cpp=1.1.1=h309bd50_0
+send2trash=1.8.3=pyh31c8845_1
+setuptools=78.1.0=pyhff2d567_0
+sigtool=0.1.3=h44b9a77_0
+sip=6.12.0=py311h155a34a_0
+siscone=3.0.6=h4a8cdbb_2
+six=1.17.0=pyhd8ed1ab_0
+snappy=1.2.1=hd02b534_0
+sniffio=1.3.1=pyhd8ed1ab_1
+soupsieve=2.5=pyhd8ed1ab_1
+stack_data=0.6.3=pyhd8ed1ab_1
+tapi=1100.0.11=he4954df_0
+tbb=2021.13.0=h7b3277c_0
+tensorboard=2.16.2=pypi_0
+tensorboard-data-server=0.7.0=py311h544b224_2
+tensorflow=2.16.2=pypi_0
+tensorflow-base=2.17.0=cpu_py311h8346247_0
+tensorflow-estimator=2.17.0=cpu_py311h0c0a56a_0
+tensorflow-io-gcs-filesystem=0.37.1=pypi_0
+tensorflow-macos=2.16.2=pypi_0
+tensorflow-metal=1.2.0=pypi_0
+termcolor=3.0.1=pyhd8ed1ab_0
+terminado=0.18.1=pyh31c8845_0
+threadpoolctl=3.6.0=pyhecae5ae_0
+tinycss2=1.4.0=pyhd8ed1ab_0
+tk=8.6.13=h5083fa2_1
+toml=0.10.2=pyhd8ed1ab_1
+tomli=2.2.1=pyhd8ed1ab_1
+tornado=6.4.2=py311h917b07b_0
+tqdm=4.67.1=pyhd8ed1ab_1
+traitlets=5.14.3=pyhd8ed1ab_1
+types-python-dateutil=2.9.0.20241206=pyhd8ed1ab_0
+typing-extensions=4.13.2=h0e9735f_0
+typing_extensions=4.13.2=pyh29332c3_0
+typing_utils=0.1.0=pyhd8ed1ab_1
+tzdata=2025b=h78e105d_0
+unicodedata2=16.0.0=py311h917b07b_0
+uproot=5.6.0=pyh29332c3_1
+uri-template=1.3.0=pyhd8ed1ab_1
+urllib3=2.4.0=pyhd8ed1ab_0
+vdt=0.4.4=h13dd4ca_0
+vector-classes=1.4.5=h420ef59_0
+watchdog=6.0.0=py311h917b07b_0
+wcwidth=0.2.13=pyhd8ed1ab_1
+webcolors=24.11.1=pyhd8ed1ab_0
+webencodings=0.5.1=pyhd8ed1ab_3
+websocket-client=1.8.0=pyhd8ed1ab_1
+werkzeug=3.1.3=pyhd8ed1ab_1
+wheel=0.45.1=pyhd8ed1ab_1
+wrapt=1.17.2=py311h917b07b_0
+xorg-libxau=1.0.12=h5505292_0
+xorg-libxdmcp=1.1.5=hd74edd7_0
+xrootd=5.7.3=py311hf458897_0
+xxhash=0.8.3=haa4e116_0
+xz=5.8.1=h9a6d368_0
+xz-gpl-tools=5.8.1=h9a6d368_0
+xz-tools=5.8.1=h39f12f2_0
+yaml=0.2.5=h3422bc3_2
+yarg=0.1.9=py_1
+zeromq=4.3.5=hcc0f68c_4
+zipp=3.21.0=pyhd8ed1ab_1
+zlib=1.3.1=h8359307_2
+zstandard=0.23.0=py311h917b07b_1
+zstd=1.5.7=h6491c7d_2
